--- a/CookPopularControl/Themes/ToolTipStyle.xaml
+++ b/CookPopularControl/Themes/ToolTipStyle.xaml
@@ -3,15 +3,15 @@
                     xmlns:common="clr-namespace:CookPopularControl.Communal"
                     xmlns:pc="clr-namespace:CookPopularControl.Controls">
 
-    <Style x:Key="DefaultToolTipStyle" TargetType="{x:Type ToolTip}">
-        <Setter Property="Foreground" Value="{DynamicResource AssistantForegroundBrush}" />
-        <Setter Property="Background" Value="{DynamicResource AssistantThemeBrush}" />
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/BaseStyle/ControlBaseStyle.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+
+    <Style x:Key="DefaultToolTipStyle" TargetType="{x:Type ToolTip}" BasedOn="{StaticResource ControlBaseStyle}">
         <Setter Property="BorderThickness" Value="0" />
-        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}" />
         <Setter Property="HasDropShadow" Value="True" />
-        <Setter Property="FontSize" Value="{DynamicResource DefaultFontSize}" />
         <Setter Property="Placement" Value="Mouse" />
-        <Setter Property="Padding" Value="8" />
+        <Setter Property="Padding" Value="6" />
         <Setter Property="CustomPopupPlacementCallback" Value="{x:Static pc:ToolTipAssistant.CustomPopupPlacementCallback}" />
         <Setter Property="common:FrameworkElementBaseAttached.CornerRadius" Value="2" />
         <Setter Property="Template">
