--- a/CookPopularControl/Themes/BaseStyle/DragableControlBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/DragableControlBaseStyle.xaml
@@ -5,6 +5,10 @@
                     xmlns:dragCore="clr-namespace:CookPopularControl.Controls.Dragables"
                     xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/BaseStyle/ControlBaseStyle.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+
     <Style x:Key="InvisibleThumbStyle" TargetType="{x:Type Thumb}">
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="Template">
@@ -135,7 +139,7 @@
             <Trigger Property="IsMouseOver" Value="true">
                 <Setter Property="Background">
                     <Setter.Value>
-                        <SolidColorBrush Color="{DynamicResource ButtonBaseMouseOverColor}" />
+                        <SolidColorBrush Color="{DynamicResource ControlMouseOverColor}" />
                     </Setter.Value>
                 </Setter>
                 <Setter Property="Opacity" Value="1" />
@@ -173,12 +177,12 @@
                             <Setter Property="BorderBrush" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" TargetName="border" />
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="true">
-                            <Setter Property="Background" Value="{DynamicResource ButtonBaseMouseOverBackground}" TargetName="border" />
-                            <Setter Property="BorderBrush" Value="{DynamicResource ButtonBaseMouseOverBackground}" TargetName="border" />
+                            <Setter Property="Background" Value="{DynamicResource ControlMouseOverBackground}" TargetName="border" />
+                            <Setter Property="BorderBrush" Value="{DynamicResource ControlMouseOverBackground}" TargetName="border" />
                         </Trigger>
                         <Trigger Property="IsPressed" Value="true">
-                            <Setter Property="Background" Value="{DynamicResource ButtonBasePressBackground}" TargetName="border" />
-                            <Setter Property="BorderBrush" Value="{DynamicResource ButtonBasePressBackground}" TargetName="border" />
+                            <Setter Property="Background" Value="{DynamicResource ControlPressBackground}" TargetName="border" />
+                            <Setter Property="BorderBrush" Value="{DynamicResource ControlPressBackground}" TargetName="border" />
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="false">
                             <Setter Property="Background" Value="{DynamicResource UnEnabledBrush}" TargetName="border" />
@@ -191,12 +195,7 @@
         </Setter>
     </Style>
 
-    <Style x:Key="StandardDragableTabItemHorizontalStyle" TargetType="{x:Type drag:DragableItem}">
-        <Setter Property="FocusVisualStyle" Value="{DynamicResource FocusVisual}" />
-        <Setter Property="Foreground" Value="{DynamicResource PrimaryForegroundBrush}" />
-        <Setter Property="Background" Value="{DynamicResource PrimaryBackgroundBrush}" />
-        <Setter Property="BorderBrush" Value="{DynamicResource FieldBorderBrush}" />
-        <Setter Property="Margin" Value="0" />
+    <Style x:Key="StandardDragableTabItemHorizontalStyle" TargetType="{x:Type drag:DragableItem}" BasedOn="{StaticResource ControlBaseStyle}">
         <Setter Property="Padding" Value="6,2" />
         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
         <Setter Property="VerticalContentAlignment" Value="Stretch" />
@@ -238,8 +237,8 @@
                                 <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="true" />
                                 <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Left" />
                             </MultiDataTrigger.Conditions>
-                            <Setter Property="Background" Value="{DynamicResource ButtonBaseMouseOverBackground}" TargetName="mainBorder" />
-                            <Setter Property="BorderBrush" Value="{DynamicResource ButtonBaseMouseOverBackground}" TargetName="mainBorder" />
+                            <Setter Property="Background" Value="{DynamicResource ControlMouseOverBackground}" TargetName="mainBorder" />
+                            <Setter Property="BorderBrush" Value="{DynamicResource ControlMouseOverBackground}" TargetName="mainBorder" />
                             <Setter Property="BorderThickness" Value="1,1,0,1" TargetName="innerBorder" />
                             <Setter Property="BorderThickness" Value="1,1,0,1" TargetName="mainBorder" />
                         </MultiDataTrigger>
@@ -248,8 +247,8 @@
                                 <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="true" />
                                 <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Bottom" />
                             </MultiDataTrigger.Conditions>
-                            <Setter Property="Background" Value="{DynamicResource ButtonBaseMouseOverBackground}" TargetName="mainBorder" />
-                            <Setter Property="BorderBrush" Value="{DynamicResource ButtonBaseMouseOverBackground}" TargetName="mainBorder" />
+                            <Setter Property="Background" Value="{DynamicResource ControlMouseOverBackground}" TargetName="mainBorder" />
+                            <Setter Property="BorderBrush" Value="{DynamicResource ControlMouseOverBackground}" TargetName="mainBorder" />
                             <Setter Property="BorderThickness" Value="1,0,1,1" TargetName="innerBorder" />
                             <Setter Property="BorderThickness" Value="1,0,1,1" TargetName="mainBorder" />
                         </MultiDataTrigger>
@@ -258,8 +257,8 @@
                                 <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="true" />
                                 <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Right" />
                             </MultiDataTrigger.Conditions>
-                            <Setter Property="Background" Value="{DynamicResource ButtonBaseMouseOverBackground}" TargetName="mainBorder" />
-                            <Setter Property="BorderBrush" Value="{DynamicResource ButtonBaseMouseOverBackground}" TargetName="mainBorder" />
+                            <Setter Property="Background" Value="{DynamicResource ControlMouseOverBackground}" TargetName="mainBorder" />
+                            <Setter Property="BorderBrush" Value="{DynamicResource ControlMouseOverBackground}" TargetName="mainBorder" />
                             <Setter Property="BorderThickness" Value="0,1,1,1" TargetName="innerBorder" />
                             <Setter Property="BorderThickness" Value="0,1,1,1" TargetName="mainBorder" />
                         </MultiDataTrigger>
@@ -268,8 +267,8 @@
                                 <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="true" />
                                 <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Top" />
                             </MultiDataTrigger.Conditions>
-                            <Setter Property="Background" Value="{DynamicResource ButtonBaseMouseOverBackground}" TargetName="mainBorder" />
-                            <Setter Property="BorderBrush" Value="{DynamicResource ButtonBaseMouseOverBackground}" TargetName="mainBorder" />
+                            <Setter Property="Background" Value="{DynamicResource ControlMouseOverBackground}" TargetName="mainBorder" />
+                            <Setter Property="BorderBrush" Value="{DynamicResource ControlMouseOverBackground}" TargetName="mainBorder" />
                             <Setter Property="BorderThickness" Value="1,1,1,0" TargetName="innerBorder" />
                             <Setter Property="BorderThickness" Value="1,1,1,0" TargetName="mainBorder" />
                         </MultiDataTrigger>
@@ -403,7 +402,7 @@
         <Setter Property="FocusVisualStyle" Value="{DynamicResource FocusVisual}" />
         <Setter Property="Foreground" Value="Black" />
         <Setter Property="Background" Value="{DynamicResource PrimaryThemeBrush}" />
-        <Setter Property="BorderBrush" Value="{DynamicResource FieldBorderBrush}" />
+        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}" />
         <Setter Property="Margin" Value="0" />
         <Setter Property="Padding" Value="6,2,6,2" />
         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
@@ -443,8 +442,8 @@
                                 <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="true" />
                                 <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Left" />
                             </MultiDataTrigger.Conditions>
-                            <Setter Property="Background" Value="{DynamicResource ButtonBaseMouseOverBackground}" TargetName="mainBorder" />
-                            <Setter Property="BorderBrush" Value="{DynamicResource ButtonBaseMouseOverBackground}" TargetName="mainBorder" />
+                            <Setter Property="Background" Value="{DynamicResource ControlMouseOverBackground}" TargetName="mainBorder" />
+                            <Setter Property="BorderBrush" Value="{DynamicResource ControlMouseOverBackground}" TargetName="mainBorder" />
                             <!--
                             <Setter Property="BorderThickness" TargetName="innerBorder" Value="1,1,1,0"/>
                             <Setter Property="BorderThickness" TargetName="mainBorder" Value="1,1,1,0"/>
@@ -455,8 +454,8 @@
                                 <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="true" />
                                 <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Bottom" />
                             </MultiDataTrigger.Conditions>
-                            <Setter Property="Background" Value="{DynamicResource ButtonBaseMouseOverBackground}" TargetName="mainBorder" />
-                            <Setter Property="BorderBrush" Value="{DynamicResource ButtonBaseMouseOverBackground}" TargetName="mainBorder" />
+                            <Setter Property="Background" Value="{DynamicResource ControlMouseOverBackground}" TargetName="mainBorder" />
+                            <Setter Property="BorderBrush" Value="{DynamicResource ControlMouseOverBackground}" TargetName="mainBorder" />
                             <!--
                             <Setter Property="BorderThickness" TargetName="innerBorder" Value="0,1,1,1"/>
                             <Setter Property="BorderThickness" TargetName="mainBorder" Value="0,1,1,1"/>
@@ -467,8 +466,8 @@
                                 <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="true" />
                                 <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Right" />
                             </MultiDataTrigger.Conditions>
-                            <Setter Property="Background" Value="{DynamicResource ButtonBaseMouseOverBackground}" TargetName="mainBorder" />
-                            <Setter Property="BorderBrush" Value="{DynamicResource ButtonBaseMouseOverBackground}" TargetName="mainBorder" />
+                            <Setter Property="Background" Value="{DynamicResource ControlMouseOverBackground}" TargetName="mainBorder" />
+                            <Setter Property="BorderBrush" Value="{DynamicResource ControlMouseOverBackground}" TargetName="mainBorder" />
                             <!--
                             <Setter Property="BorderThickness" TargetName="innerBorder" Value="1,0,1,1"/>
                             <Setter Property="BorderThickness" TargetName="mainBorder" Value="1,0,1,1"/>
@@ -479,8 +478,8 @@
                                 <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="true" />
                                 <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Top" />
                             </MultiDataTrigger.Conditions>
-                            <Setter Property="Background" Value="{DynamicResource ButtonBaseMouseOverBackground}" TargetName="mainBorder" />
-                            <Setter Property="BorderBrush" Value="{DynamicResource ButtonBaseMouseOverBackground}" TargetName="mainBorder" />
+                            <Setter Property="Background" Value="{DynamicResource ControlMouseOverBackground}" TargetName="mainBorder" />
+                            <Setter Property="BorderBrush" Value="{DynamicResource ControlMouseOverBackground}" TargetName="mainBorder" />
                             <!--
                             <Setter Property="BorderThickness" TargetName="innerBorder" Value="1,1,0,1"/>
                             <Setter Property="BorderThickness" TargetName="mainBorder" Value="1,1,0,1"/>
@@ -684,8 +683,8 @@
         <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="VerticalAlignment" Value="Top" />
         <Setter Property="Padding" Value="2,2,2,2" />
-        <Setter Property="Background" Value="{DynamicResource PrimaryBackgroundBrush}" />
-        <Setter Property="PenBrush" Value="{DynamicResource FieldBorderBrush}" />
+        <Setter Property="Background" Value="{DynamicResource PrimaryThemeBrush}" />
+        <Setter Property="PenBrush" Value="{DynamicResource BorderBrush}" />
         <Setter Property="PenThickness" Value=".5" />
         <Setter Property="Template">
             <Setter.Value>
@@ -696,12 +695,7 @@
         </Setter>
     </Style>
 
-    <Style x:Key="TrapezoidDragableTabItemStyle" TargetType="{x:Type drag:DragableItem}">
-        <Setter Property="FocusVisualStyle" Value="{DynamicResource FocusVisual}" />
-        <Setter Property="Foreground" Value="{DynamicResource PrimaryForegroundBrush}" />
-        <Setter Property="Background" Value="{DynamicResource PrimaryBackgroundBrush}" />
-        <Setter Property="BorderBrush" Value="{DynamicResource FieldBorderBrush}" />
-        <Setter Property="Margin" Value="0,0,0,0" />
+    <Style x:Key="TrapezoidDragableTabItemStyle" TargetType="{x:Type drag:DragableItem}" BasedOn="{StaticResource ControlBaseStyle}">
         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
         <Setter Property="VerticalContentAlignment" Value="Stretch" />
         <Setter Property="Template">
@@ -826,15 +820,10 @@
         </Setter>
     </Style>
 
-    <Style x:Key="DragableTabControlBaseStyle" TargetType="{x:Type drag:DragableTabControl}">
-        <Setter Property="Background" Value="{DynamicResource PrimaryBackgroundBrush}" />
-        <Setter Property="BorderBrush" Value="{DynamicResource FieldBorderBrush}" />
-        <Setter Property="BorderThickness" Value="1" />
-        <Setter Property="Foreground" Value="{DynamicResource PrimaryForegroundBrush}" />
+    <Style x:Key="DragableTabControlBaseStyle" TargetType="{x:Type drag:DragableTabControl}" BasedOn="{StaticResource ControlBaseStyle}">
         <Setter Property="HorizontalContentAlignment" Value="Center" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="Padding" Value="2" />
-
         <Setter Property="HeaderPrefixContent" Value="😀" />
         <Setter Property="HeaderSuffixContent" Value="😂" />
         <Setter Property="ShowDefaultAddButton" Value="True" />
