--- a/CookPopularControl/Themes/DefaultPopularColor.xaml
+++ b/CookPopularControl/Themes/DefaultPopularColor.xaml
@@ -4,6 +4,7 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/CookColors/LightColor.xaml" />
         <!--<ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/CookColors/DarkColor.xaml" />-->
+        <!--<ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/CookColors/DodgerBlueColor.xaml" />-->
     </ResourceDictionary.MergedDictionaries>
 
 </ResourceDictionary>
