--- a/CookPopularControl/Themes/ListViewStyle.xaml
+++ b/CookPopularControl/Themes/ListViewStyle.xaml
@@ -174,7 +174,7 @@
                     <Setter.Value>
                         <ControlTemplate TargetType="GridViewColumnHeader">
                             <DockPanel Name="PART_FloatingHeaderCanvas">
-                                <Border BorderBrush="{DynamicResource FieldBorderBrush}" BorderThickness="1" />
+                                <Border BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" />
                             </DockPanel>
                         </ControlTemplate>
                     </Setter.Value>
