--- a/CookPopularControl/Themes/ProgressBarStyle.xaml
+++ b/CookPopularControl/Themes/ProgressBarStyle.xaml
@@ -13,7 +13,7 @@
         <Setter Property="pc:LinearProgressBarAssistant.IsShowIcon" Value="False" />
         <Setter Property="pc:LinearProgressBarAssistant.IconSize" Value="20" />
         <Setter Property="pc:LinearProgressBarAssistant.IsShowPercent" Value="True" />
-        <Setter Property="pc:LinearProgressBarAssistant.TextColor" Value="{DynamicResource PrimaryForegroundBrush}" />
+        <Setter Property="pc:LinearProgressBarAssistant.TextColor" Value="{DynamicResource AssistantForegroundBrush}" />
     </Style>
     <Style x:Key="AirFanLinearProgressBarStyle" TargetType="{x:Type ProgressBar}" BasedOn="{StaticResource DefaultProgressBarStyle}">
         <Setter Property="pc:LinearProgressBarAssistant.IsShowIcon" Value="True" />
@@ -26,7 +26,7 @@
     <Style x:Key="CircularProgressBarStyle" TargetType="{x:Type ProgressBar}" BasedOn="{StaticResource CircularProgressBarBaseStyle}">
         <Setter Property="pc:CircularProgressAssistant.ArcThickness" Value="15" />
         <Setter Property="pc:LinearProgressBarAssistant.IsShowPercent" Value="True" />
-        <Setter Property="pc:LinearProgressBarAssistant.TextColor" Value="{DynamicResource PrimaryForegroundBrush}" />
+        <Setter Property="pc:LinearProgressBarAssistant.TextColor" Value="{DynamicResource AssistantForegroundBrush}" />
     </Style>
     <Style x:Key="IndeterminateCircularProgressBarStyle" TargetType="{x:Type ProgressBar}" BasedOn="{StaticResource CircularProgressBarStyle}">
         <Setter Property="IsIndeterminate" Value="True" />
@@ -42,7 +42,7 @@
         <Setter Property="pc:WaveProgressBarAssistant.WaveStroke" Value="{DynamicResource BorderBrush}" />
         <Setter Property="pc:WaveProgressBarAssistant.WaveStrokeThickness" Value="2" />
         <Setter Property="pc:LinearProgressBarAssistant.IsShowPercent" Value="True" />
-        <Setter Property="pc:LinearProgressBarAssistant.TextColor" Value="{DynamicResource PrimaryForegroundBrush}" />
+        <Setter Property="pc:LinearProgressBarAssistant.TextColor" Value="{DynamicResource AssistantForegroundBrush}" />
     </Style>
     <Style x:Key="WaveProgressBarHidePercentStyle" TargetType="{x:Type ProgressBar}" BasedOn="{StaticResource WaveProgressBarStyle}">
         <Setter Property="pc:LinearProgressBarAssistant.IsShowPercent" Value="False" />
